--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,20 @@ body
     padding:0;
 }
 
+#cabecera{
+    background:#33a;
+    box-shadow:0 2px 20px 0 rgba(0,0,0,.5);
+    color:#fff;
+    font-weight:700;
+    margin:0;padding:.5em
+}
+
+#cabecera #tagline{
+    padding:0 0 0 1em;
+    font-weight:400;
+    font-size:.8em
+}
+
 #container
 {
     width=70%;
@@ -21,4 +35,8 @@ body
 {
     font-size: 20px;
 
+}
+
+#post{
+    padding:1em
 }
