--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,6 +37,15 @@ body
 
 }
 
-#post{
+#post
+{
     padding:1em
 }
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+} 
